project(minesweeper)
cmake_minimum_required(VERSION 3.8)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_BUILD_TYPE Release)
set(SOURCE_FILES ${SOURCE_FILES} src/MineSweeper.cpp src/MineSweeper.h)
set(SOURCE_FILES ${SOURCE_FILES} src/managers/AssetManager.cpp src/managers/AssetManager.h)
set(SOURCE_FILES ${SOURCE_FILES} src/managers/StateManager.cpp src/managers/StateManager.h)
set(SOURCE_FILES ${SOURCE_FILES} src/states/State.h)
set(SOURCE_FILES ${SOURCE_FILES} src/states/MainMenuState.cpp src/states/MainMenuState.h)
set(SOURCE_FILES ${SOURCE_FILES} src/states/GameState.cpp src/states/GameState.h)
set(SOURCE_FILES ${SOURCE_FILES} src/states/AboutState.cpp src/states/AboutState.h)
set(SOURCE_FILES ${SOURCE_FILES} src/states/DifficultyMenuState.cpp src/states/DifficultyMenuState.h)
set(SOURCE_FILES ${SOURCE_FILES} src/states/CustomDifficultyState.cpp src/states/CustomDifficultyState.h)
set(SOURCE_FILES ${SOURCE_FILES} src/states/LeaderboardState.cpp src/states/LeaderboardState.h)
set(SOURCE_FILES ${SOURCE_FILES} src/states/RecordSaveState.cpp src/states/RecordSaveState.h)
set(SOURCE_FILES ${SOURCE_FILES} src/managers/LeaderboardManager.cpp src/managers/LeaderboardManager.h)
set(SOURCE_FILES ${SOURCE_FILES} src/main.cpp src/DEFINITIONS.h)
find_package(SFML 2.5.1 COMPONENTS graphics audio REQUIRED)
add_executable(minesweeper ${SOURCE_FILES})
target_link_libraries(minesweeper sfml-graphics sfml-audio)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}\\_Resources\\
        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}\\_Resources\\)